--- a/TripMatcher/src/app/footer/footer.component.css
+++ b/TripMatcher/src/app/footer/footer.component.css
@@ -57,6 +57,7 @@
    display: flex;
    flex-direction: row;
    justify-content: center;
+   cursor: pointer;
 }
 
 .footerButton button {
@@ -72,6 +73,7 @@
    line-height: 27px;
    text-align: center;
    color: white;
+   cursor: pointer;
 }
 
 
