--- a/TripMatcher/src/app/hero/hero.component.css
+++ b/TripMatcher/src/app/hero/hero.component.css
@@ -48,6 +48,7 @@ h6 {
    display: flex;
    flex-direction: column;
    align-items: center;
+   cursor: pointer;
 }
 
 button {
@@ -63,6 +64,7 @@ button {
    font-size: 22px;
    line-height: 27px;
    text-align: center;
+   cursor: pointer;
 
 }
 
