--- a/TripMatcher/src/app/login/login.component.html
+++ b/TripMatcher/src/app/login/login.component.html
@@ -24,5 +24,5 @@
 </div>
 
 <div class="loginFooter">
-  <p>Not have any account yet? <a routerlink="">Sign up</a></p>
+  <p>Not have any account yet? <a (click)="goToRegister()">Sign up</a></p>
 </div>
