--- a/TripMatcher/src/app/main-filter/main-filter.component.css
+++ b/TripMatcher/src/app/main-filter/main-filter.component.css
@@ -2,7 +2,8 @@
    display: flex;
    flex-direction: column;
    align-items: center;
-   margin-bottom: 50px;
+   margin-bottom: 100px;
+   margin-top: 50px;
 }
 
 .filterTekst {
