--- a/TripMatcher/src/app/personal-page/personal-page.component.css
+++ b/TripMatcher/src/app/personal-page/personal-page.component.css
@@ -51,6 +51,7 @@ img {
    line-height: 21px;
    color: #303030;
    display: inline-block;
+   cursor: pointer;
 }
 
 .profileNavigation a:active {
