--- a/TripMatcher/src/app/personal-page/personal-page.component.html
+++ b/TripMatcher/src/app/personal-page/personal-page.component.html
@@ -7,10 +7,10 @@
     </div>
   </div>
   <div class="profileNavigation">
-    <a routerlink="">Favorites</a>
+    <!-- <a routerlink="">Favorites</a> -->
     <a routerlink="">Interests</a>
     <a routerlink="">Suggestions</a>
-    <a routerlink="">My Trips</a>
+    <!-- <a routerlink="">My Trips</a> -->
   </div>
 </div>
 <div class="profileContent">
