--- a/TripMatcher/src/app/main-filter/main-filter.component.html
+++ b/TripMatcher/src/app/main-filter/main-filter.component.html
@@ -1,4 +1,4 @@
-<div class="mainFilter">
+<div class="mainFilter" id="trips">
   <div class="filterTekst">
     <p>Choose a category and</p>
     <p>explore inspiring trips</p>
