--- a/TripMatcher/src/app/personal-page/personal-page.component.html
+++ b/TripMatcher/src/app/personal-page/personal-page.component.html
@@ -14,11 +14,12 @@
   </div>
 </div>
 <div class="profileContent">
-  <div class="noContent">
+  <app-interests></app-interests>
+  <!-- <div class="noContent">
     <div>
       <p>There is nothing in your favorites.</p>
       <p><span class="blue">Begin to explore trips </span>and save your favorites...</p>
     </div>
 
-  </div>
+  </div> -->
 </div>
