--- a/TripMatcher/src/app/personal-page/personal-page.component.html
+++ b/TripMatcher/src/app/personal-page/personal-page.component.html
@@ -14,7 +14,14 @@
   </div>
 </div>
 <div class="profileContent">
+
+
   <app-interests></app-interests>
+
+
+  <!-- <app-trips></app-trips> -->
+
+
   <!-- <div class="noContent">
     <div>
       <p>There is nothing in your favorites.</p>
