issues fixed, started on tags on select things

--- a/TripMatcher/src/app/navbar/navbar.component.html
+++ b/TripMatcher/src/app/navbar/navbar.component.html
@@ -42,6 +42,7 @@
       </a>
       <div class="navBarPersonal">
         <div>
+          <p *ngIf="userName != undefined" (click)="topp()">To personal page</p>
           <p *ngIf="userName != undefined" (click)="openSettings()">Account Settings</p>
           <p *ngIf="userName != undefined" (click)="signOut()">Sign Out</p>
           <p *ngIf="userName == undefined" (click)="openRegister()">Register</p>
