--- a/TripMatcher/src/app/interests/interests.component.html
+++ b/TripMatcher/src/app/interests/interests.component.html
@@ -7,8 +7,7 @@
     <p>When I close my eyes and think of my ideal vacation, I am in ...</p>
     <div class="tagsContainer">
       <p *ngFor="let tag of this.apiTags1.Qtags" (click)="clickedTagsToUserCategoryTable(tag['Category_id'])">
-        {{tag["Category_name"]}}
-      </p>
+        {{tag["Category_name"]}}</p>
 
     </div>
     <p>I would love to have a ...</p>
