--- a/TripMatcher/src/app/hero/hero.component.css
+++ b/TripMatcher/src/app/hero/hero.component.css
@@ -23,7 +23,7 @@ h3 {
    font-style: normal;
    line-height: 42px;
    letter-spacing: -0.01em;
-   color: #303030;
+   color: var(--secondary-color);
 }
 
 .heroSub {
@@ -39,7 +39,7 @@ h6 {
    font-size: 19px;
    line-height: 23px;
    text-align: center;
-   color: #F2F2F2;
+   color: var( --text-color-light);
    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
 }
 
@@ -54,7 +54,7 @@ h6 {
 button {
    width: 218px;
    height: 54px;
-   background-color: #24B9E9;
+   background-color: var(--primary-color-blue);
    border-radius: 100px;
    color: white;
    border-style: none;
