--- a/TripMatcher/src/app/personal-page/personal-page.component.css
+++ b/TripMatcher/src/app/personal-page/personal-page.component.css
@@ -23,7 +23,7 @@ img {
    font-size: 22px;
    line-height: 28px;
    letter-spacing: -0.01em;
-   color: #303030;
+   color: var(--secondary-color);
    margin: 0;
 }
 
@@ -32,7 +32,7 @@ img {
    font-weight: 300;
    font-size: 14px;
    line-height: 17px;
-   color: #303030;
+   color: var(--secondary-color);
    margin: 0;
 }
 
@@ -49,7 +49,7 @@ img {
    font-weight: bold;
    font-size: 17px;
    line-height: 21px;
-   color: #303030;
+   color: var(--secondary-color);
    display: inline-block;
    cursor: pointer;
 }
@@ -57,7 +57,7 @@ img {
 .profileNavigation a:active {
    display: inline-block;
    text-decoration: underline;
-   text-decoration-color: #24B9E9;
+   text-decoration-color: var(--primary-color-blue);
    text-underline-offset: 5px;
    text-decoration-thickness: 3px;
 }
@@ -74,7 +74,7 @@ img {
    padding: 10px;
    height: 195px;
    width: 100%;
-   background: #EAEAEA;
+   background: var(--background-color-light);
    display: flex;
    align-items: center;
    justify-content: center;
@@ -88,7 +88,7 @@ img {
 }
 
 .blue {
-   color: #24B9E9;
+   color: var(--primary-color-blue);
 }
 
 @media only screen and (min-width: 1080px) {
@@ -112,7 +112,7 @@ img {
    font-size: 35px;
    line-height: 42px;
    letter-spacing: -0.01em;
-   color: #303030;
+   color: var(--secondary-color);
    margin: 0;
 }
 
@@ -121,7 +121,7 @@ img {
    font-weight: 300;
    font-size: 22px;
    line-height: 27px;
-   color: #303030;
+   color: var(--secondary-color);
    margin: 0;
    margin-top: 10px;
 }
@@ -146,7 +146,7 @@ img {
    font-weight: bold;
    font-size: 22px;
    line-height: 27px;
-   color: #303030;
+   color: var(--secondary-color);
    margin-right: 90px;
    display: inline-block;
 }
@@ -154,10 +154,17 @@ img {
 .profileNavigation a:hover {
    display: inline-block;
    text-decoration: underline;
-   text-decoration-color: #24B9E9;
+   text-decoration-color: var(--primary-color-blue);
    text-underline-offset: 5px;
    text-decoration-thickness: 3px;
 }
+
+/* .activeInterests {
+   text-decoration: underline;
+   text-decoration-color: var(--primary-color-blue);
+   text-underline-offset: 5px;
+   text-decoration-thickness: 3px;
+} */
 
 .profileContent {
    margin-top: 50px;
@@ -168,7 +175,7 @@ img {
    position: absolute;
    width: 1440px;
    height: 195px;
-   background: #EAEAEA;
+   background: var(--background-color-light);
    display: flex;
    align-items: center;
    justify-content: center;
@@ -182,6 +189,6 @@ img {
 }
 
 .blue {
-   color: #24B9E9;
+   color: var(--primary-color-blue);
 }
 }
