--- a/TripMatcher/src/app/suggestions/suggestions.component.css
+++ b/TripMatcher/src/app/suggestions/suggestions.component.css
@@ -1,7 +1,7 @@
 
 @media only screen and (min-width: 1080px) {
    .favoriteTags {
-      background-color: #EAEAEA;
+      background-color: var(--background-color-light);
       height: 324px;
       padding: 49px;
    }
@@ -12,7 +12,7 @@
       font-weight: 800;
       font-size: 26px;
       line-height: 31px;
-      color: #303030;
+      color: var(--secondary-color);
       margin-left: 100px;
    }
 
@@ -28,7 +28,7 @@
       display: flex;
       height: 320px;
       margin-bottom: 1rem;
-      background-color: #EAEAEA;
+      background-color: var(--background-color-light);
       position: relative;
       }
    
@@ -48,7 +48,7 @@
       font-weight: 800;
       font-size: 26px;
       line-height: 31px;
-      color: #303030;
+      color: var(--secondary-color);
    }
    
    .tripContent {
@@ -100,19 +100,17 @@
       
    .tag{
       cursor: pointer;
-      border: solid black 1px;
+      border: solid var(--secondary-color) 1px;
       width: max-content;
       border-radius: 15px;
       padding: 3px 10px;
       font-size: 13px;
       margin: 4px;
-     
-      /* box-shadow: black 4px 4px 4px ; */
       }
    
    .tag:hover {
-      color: #24B9E9;
-      border: solid #24B9E9 1px;
+      color: var(--primary-color-blue);
+      border: solid var(--primary-color-blue) 1px;
        
    }
        
