--- a/TripMatcher/src/styles.css
+++ b/TripMatcher/src/styles.css
@@ -1,14 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+:root {
+   --primary-color-blue: rgb(36, 185, 233);
+   --secondary-color: rgb(48, 48, 48);
+   --background-color-light: #eaeaea;
+   --text-color-light: #f2f2f2;
+}
+
 
 
 body {
-   
    box-sizing: border-box;
    margin: 0;
-   /* margin-left: auto;
-   margin-right: auto; */
-   font-family: 'Inter';
+   font-family: 'Inter', sans-serif;
    position: relative;
 }
-/* html, body { height: 100%; } */
-/* body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
+
+/* var(--primary-color-blue)
+var(--secondary-color)
+var( --text-color-light)
+var(--background-color-light) */
+
+
+
+
