--- a/TripMatcher/src/app/interests/interests.component.css
+++ b/TripMatcher/src/app/interests/interests.component.css
@@ -74,11 +74,11 @@ h3 {
    color: var(--primary-color-blue);
 }
 
-.tagsContainer .active {
+/* .tagsContainer .active {
    border: var(--primary-color-blue) solid 1px;
    color: white;
    background-color: var(--primary-color-blue);
-}
+} */
 
 
 .interestsFooter img {
@@ -140,8 +140,16 @@ h3 {
    font-size: 17px;
 }
 
-.test {
-   color: red;
+.tagsContainer .tagActive {
+   border: var(--primary-color-blue) solid 1px;
+   color: white;
+   background-color: var(--primary-color-blue);
+}
+
+.tagsContainer .tagActive:hover {
+   border: #6B6B6B solid 1px;
+   color: #6B6B6B;
+   background-color: white;
 }
 
 }
