--- a/TripMatcher/src/app/interests/interests.component.html
+++ b/TripMatcher/src/app/interests/interests.component.html
@@ -1,6 +1,8 @@
-<div class="interests">
+<div class="interests" (ngOnInit)="selectedTags()">
   <div class="header">
-    <p><span>Answer questions below </span> <b>and enjoy personal suggestions...</b></p>
+    <p><span>Answer questions below </span> <b>and enjoy personal
+        suggestions...</b>
+    </p>
   </div>
   <div class="questionsContainer">
     <h3>Your interests</h3>
@@ -13,27 +15,32 @@
     </div>
     <p>I would love to have a ...</p>
     <div class="tagsContainer">
-      <p *ngFor="let tag of this.apiTags2.Qtags" (click)="clickedTagsToUserCategoryTable(tag['Category_id'])">
+      <p *ngFor="let tag of this.apiTags2.Qtags" (click)="clickedTagsToUserCategoryTable(tag['Category_id'])"
+        id="{{tag['Category_name']}}">
         {{tag["Category_name"]}}</p>
     </div>
     <p>I can see myself being ... during my holidays</p>
     <div class="tagsContainer">
-      <p *ngFor="let tag of this.apiTags3.Qtags" (click)="clickedTagsToUserCategoryTable(tag['Category_id'])">
+      <p *ngFor="let tag of this.apiTags3.Qtags" (click)="clickedTagsToUserCategoryTable(tag['Category_id'])"
+        id="{{tag['Category_name']}}">
         {{tag["Category_name"]}}</p>
     </div>
     <p>For me nature equals to ...</p>
     <div class="tagsContainer">
-      <p *ngFor="let tag of this.apiTags4.Qtags" (click)="clickedTagsToUserCategoryTable(tag['Category_id'])">
+      <p *ngFor="let tag of this.apiTags4.Qtags" (click)="clickedTagsToUserCategoryTable(tag['Category_id'])"
+        id="{{tag['Category_name']}}">
         {{tag["Category_name"]}}</p>
     </div>
     <p>My favorite sports are ...</p>
     <div class="tagsContainer">
-      <p *ngFor="let tag of this.apiTags5.Qtags" (click)="clickedTagsToUserCategoryTable(tag['Category_id'])">
+      <p *ngFor="let tag of this.apiTags5.Qtags" (click)="clickedTagsToUserCategoryTable(tag['Category_id'])"
+        id="{{tag['Category_name']}}">
         {{tag["Category_name"]}}</p>
     </div>
     <p>When it comes to arts & culture I cannot miss ...</p>
     <div class="tagsContainer">
-      <p *ngFor="let tag of this.apiTags6.Qtags" (click)="clickedTagsToUserCategoryTable(tag['Category_id'])">
+      <p *ngFor="let tag of this.apiTags6.Qtags" (click)="clickedTagsToUserCategoryTable(tag['Category_id'])"
+        id="{{tag['Category_name']}}">
         {{tag["Category_name"]}}</p>
     </div>
     <!-- <p>I would like to travel to ...</p>
@@ -42,17 +49,20 @@
     </div> -->
     <p>I prefer places that are...</p>
     <div class="tagsContainer">
-      <p *ngFor="let tag of this.apiTags7.Qtags" (click)="clickedTagsToUserCategoryTable(tag['Category_id'])">
+      <p *ngFor="let tag of this.apiTags7.Qtags" (click)="clickedTagsToUserCategoryTable(tag['Category_id'])"
+        id="{{tag['Category_name']}}">
         {{tag["Category_name"]}}</p>
     </div>
     <p>I prefer ... activities</p>
     <div class="tagsContainer">
-      <p *ngFor="let tag of this.apiTags8.Qtags" (click)="clickedTagsToUserCategoryTable(tag['Category_id'])">
+      <p *ngFor="let tag of this.apiTags8.Qtags" (click)="clickedTagsToUserCategoryTable(tag['Category_id'])"
+        id="{{tag['Category_name']}}">
         {{tag["Category_name"]}}</p>
     </div>
     <p>I usually travel by ...</p>
     <div class="tagsContainer">
-      <p *ngFor="let tag of this.apiTags9.Qtags" (click)="clickedTagsToUserCategoryTable(tag['Category_id'])">
+      <p *ngFor="let tag of this.apiTags9.Qtags" (click)="clickedTagsToUserCategoryTable(tag['Category_id'])"
+        id="{{tag['Category_name']}}">
         {{tag["Category_name"]}}</p>
     </div>
     <!-- <h3>Your countries</h3>
