enkele dingen gefixt

--- a/TripMatcher/src/app/interests/interests.component.html
+++ b/TripMatcher/src/app/interests/interests.component.html
@@ -1,4 +1,4 @@
-<div class="interests" (ngOnInit)="selectedTags()">
+<div class="interests">
   <div class="header">
     <p><span>Answer questions below </span> <b>and enjoy personal
         suggestions...</b>
