--- a/TripMatcher/src/app/suggestions/suggestions.component.html
+++ b/TripMatcher/src/app/suggestions/suggestions.component.html
@@ -4,7 +4,8 @@
       <h3>Your interests and preferences</h3>
     </div>
     <div class="favoriteTagsContainer">
-      <p *ngFor="let tag of this.SuggestionsTripsUser.category_id" class="tag" (click)="deleteInDB('Nature')">
+      <p *ngFor="let tag of this.SuggestionsTripsUser.category_id" class="tag"
+        (click)="deleteInDB(tag['Category_name'])">
         {{tag["Category_name"]}} X</p>
     </div>
     <p>View and edit your preferences</p>
