--- a/TripMatcher/src/app/personal-page/personal-page.component.html
+++ b/TripMatcher/src/app/personal-page/personal-page.component.html
@@ -10,6 +10,7 @@
     <!-- <a routerlink="">Favorites</a> -->
     <a (click)="goToInterests()">Interests</a>
     <a (click)="goToSuggestions()">Suggestions</a>
+    <a href="http://127.0.0.1:8000/index">To admin dashboard</a>
     <!-- <a routerlink="">My Trips</a> -->
   </div>
 </div>
