--- a/TripMatcher/Laravel/tripmatcherL/public/app.css
+++ b/TripMatcher/Laravel/tripmatcherL/public/app.css
@@ -179,7 +179,10 @@ a:hover {
 }
 
 .heroAdmin {
-   background-color: #676767;
+   /* background-color: #676767; */
+   background-image: url("assets/img/heroBG.jpg");
+   background-size: cover;
+   background-position: center;
    height: 232px;
    display: flex;
    flex-direction: row;
@@ -193,6 +196,7 @@ a:hover {
    line-height: 48px;
    letter-spacing: -0.01em;
    color: #EAEAEA;
+   text-decoration: solid;
    padding-left: 180px;
    padding-bottom: 35px;
    align-self: flex-end;
