--- a/TripMatcher/src/app/trips/trips.component.html
+++ b/TripMatcher/src/app/trips/trips.component.html
@@ -2,6 +2,9 @@
   <div class="tripImage">
     <div class="afbeelding">
       <img src="{{item.Image}}" alt="image of activity">
+      <!-- <img src="../../../../../TripMatcher/TripMatcher/Laravel/tripmatcherL/public/assets/img/Trip/bobbejaanland.jpg"
+        alt="image of activity"> -->
+
     </div>
     <!-- <div (click)="favo()" [ngClass]="statusClass" class="like"><img src="/assets/img/Hart.svg" alt="hart"> -->
     <!-- </div> -->
