--- a/TripMatcher/src/app/login/login.component.html
+++ b/TripMatcher/src/app/login/login.component.html
@@ -15,7 +15,7 @@
 
     <div class="loginPassword formInput">
       <label for="Lpassword">Password</label>
-      <input type="Lpassword" name="Lpassword" id="Lpassword" required formControlName="Lpassword">
+      <input type="password" name="Lpassword" id="Lpassword" required formControlName="Lpassword">
     </div>
 
     <input type="button" value="Sign in" (click)="submitForm()" class="button">
