--- a/TripMatcher/src/app/navbar/navbar.component.html
+++ b/TripMatcher/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="navBar shadow">
-  <img src="assets/img/logo2.png" alt="logo" class="logo">
+  <a routerLink=""><img src="assets/img/logo2.png" alt="logo" class="logo"></a>
   <div class="navItems">
     <div class="menuItem">
       <a routerLink="">Home</a>
