--- a/TripMatcher/src/app/registration-form/registration-form.component.html
+++ b/TripMatcher/src/app/registration-form/registration-form.component.html
@@ -15,7 +15,7 @@
       </div>
       <div class="formPassword formInput">
         <label for="Rpassword">Password</label>
-        <input type="Rpassword" name="Rpassword" id="Rpassword" required formControlName="Rpassword">
+        <input type="password" name="Rpassword" id="Rpassword" required formControlName="Rpassword">
 
         <input type="button" value="Create an Account" (click)="submitRegistration()" class="button">
       </div>
