--- a/TripMatcher/Laravel/tripmatcherL/public/app.css
+++ b/TripMatcher/Laravel/tripmatcherL/public/app.css
@@ -143,10 +143,10 @@ h3{
    cursor: pointer;
    border: solid #6B6B6B 1px;
    width: max-content;
-   border-radius: 15px;
-   padding: 3px 10px;
+   border-radius: 25px;
+   padding: 5px 15px;
    font-size: 13px;
-   margin: 4px;
+   margin: 9px;
    font-family: 'Roboto';
    color: #6B6B6B;
    }
@@ -180,7 +180,7 @@ a:hover {
 
 .heroAdmin {
    /* background-color: #676767; */
-   background-image: url("assets/img/heroBG.jpg");
+   background-image: url("assets/img/AdminDashboardHero.png");
    background-size: cover;
    background-position: center;
    height: 232px;
