--- a/TripMatcher/src/app/interests/interests.component.css
+++ b/TripMatcher/src/app/interests/interests.component.css
@@ -4,7 +4,7 @@
 
 .header {
    background-color: var(--background-color-light);
-   height: 160px;
+   height: 100px;
    padding-left: 30px;
    display: flex;
    align-items: center;
@@ -14,6 +14,7 @@
 .header p {
    font-size: 18px;
    font-weight: 200;
+   padding: none;
 }
 
 .header span {
@@ -113,8 +114,8 @@ h3 {
 @media only screen and (min-width: 1080px) {
 
 .header {
-   height: 160px;
-   padding: 50px 230px;
+   height: 100px;
+   padding: 40px 230px;
 }
 
 .header p {
