--- a/TripMatcher/src/app/suggestions/suggestions.component.css
+++ b/TripMatcher/src/app/suggestions/suggestions.component.css
@@ -2,7 +2,7 @@
 @media only screen and (min-width: 1080px) {
    .favoriteTags {
       background-color: var(--background-color-light);
-      height: 324px;
+      height: fit-content;
       padding: 49px;
    }
 
@@ -12,6 +12,7 @@
       font-weight: 800;
       font-size: 26px;
       line-height: 31px;
+      margin-top: 10px;
       color: var(--secondary-color);
       margin-left: 100px;
    }
@@ -41,6 +42,7 @@
    }
 
    .suggestionsTitle {
+      margin-top: 100px;
       margin-left: 150px;
       margin-bottom: 50px;
    }
