--- a/TripMatcher/Laravel/tripmatcherL/public/app.css
+++ b/TripMatcher/Laravel/tripmatcherL/public/app.css
@@ -6,7 +6,7 @@
 .activiteit{
    display: flex;
    height: 320px;
-   margin-bottom: 1rem;
+   margin-bottom: 2rem;
    background-color: #EAEAEA;
    position: relative;
    flex-direction: row;
@@ -56,7 +56,7 @@
 }
 
 .buttons {
-   background-color: #EAEAEA;
+   background-color: white;
    color: red;
    border-radius: 25px;
    border-style: none;
@@ -226,9 +226,19 @@ a:hover {
    font-weight: bold;
    text-decoration: underline;
    text-decoration-color: #24B9E9;
-   /* text-underline-offset: 5px;
-   text-decoration-thickness: 3px; */
+   text-underline-offset: 5px;
+   text-decoration-thickness: 3px;
 }
+
+.activeLink {
+   display: inline-block;
+   font-weight: bold;
+   text-decoration: underline;
+   text-decoration-color: #24B9E9;
+   text-underline-offset: 5px;
+   text-decoration-thickness: 3px;
+}
+
 
 .labelForm {
    font-family: Inter;
